--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -37,9 +37,13 @@
 }
 
 .update-buttom {
-  display: flex;
+  margin-top: 20px;
 }
+// .update-buttom {
+//   display: flex;
+// }
 .update-memo,.fa-redo-alt{
   color: #ff0000;
+  // width: 300px;
   margin: 10px 0 0 10px;
 }
