--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,9 +26,7 @@
       <br>
       <div class="col-lg-6">
           <!--< %= render "routine_tasks/index", routine_tasks: @routine_tasks %>-->
-      <!--<h5>ルーチンタスク</h5>-->
-
-      <h5>ここにルーチンタスクもしくは習慣を追加してください</h5>
+      <h5>ここにルーチンタスクもしくは小さな習慣を追加して下さい</h5>
       <div class='container px-5'>
         <div class='row'>
           <div class='col-8'>
