--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,12 +9,12 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li><%#= link_to " About ", home_about_path, class: "fas fa-book-open nav-link text-light" %></li>
-          <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-user nav-link text-light" %></li>
+          <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-user nav-link text-success" %></li>
           <li><%= link_to " ユーザー ", users_path, class: "fas fa-users nav-link text-light" %></li>
-          <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-light" %></li>
-          <li><%= link_to " 楽天検索 ", books_search_path, class: "fas fa-tasks nav-link text-light" %></li>
-          <!--<li class= "far fa-calendar-alt nav-link text-light fx-1" > カレンダー </li>-->
+          <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-primary" %></li>
           <li class= "far fa-bell nav-link text-light">通知</li>
+          <li><%= link_to " 楽天検索 ", books_search_path, class: "fab fa-r-project nav-link text-danger" %></li>
+          <!--<li class= "far fa-calendar-alt nav-link text-light fx-1" > カレンダー </li>-->
           <li><%= link_to " ログアウト ", destroy_user_session_path, method: :delete,class: "fas fa-sign-out-alt nav-link text-light" %></li>
         <% else %>
           <li><%#= link_to " About ", home_about_path, class: "fas fa-book-open nav-link text-light" %></li>
