--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <!--</div>-->
         <%= yield %>
         </main>
-      <%= render "layouts/footer" %>
     </div>
   </body>
+      <% render "layouts/footer" %>
 </html>
