--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
           <li><%= link_to " ユーザー ", users_path, class: "fas fa-users nav-link text-light" %></li>
           <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-primary" %></li>
           <li class= "far fa-bell nav-link text-light">通知</li>
-          <li><%= link_to " 楽天検索 ", books_search_path, class: "fab fa-r-project nav-link text-danger" %></li>
+          <li><%= link_to " 楽天書籍検索 ", books_search_path, class: "fab fa-r-project nav-link text-danger" %></li>
           <!--<li class= "far fa-calendar-alt nav-link text-light fx-1" > カレンダー </li>-->
           <li><%= link_to " ログアウト ", destroy_user_session_path, method: :delete,class: "fas fa-sign-out-alt nav-link text-light" %></li>
         <% else %>
