--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,10 +75,11 @@ main {
   width: 100%;
   position: relative;
   min-height: 100vh;
-  background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
+  // background-color : ;
+  // background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-size: cover;
 }
 
 
