--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-show{
+  margin: 20px 0 20px 0;
+}
+
+.user-name h5{
+  height: 30px;
+  display: inline-block;
+}
+.user-introduction h5 {
+  display: inline-block;
+
+}
