--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,7 +105,7 @@ main {
   background-color: gray;
   color: white;
   text-align: center;
-  border-radius: 50px;
+  // border-radius: 50px;
 }
 
 //----------削除ボタン----------//
