--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,14 @@
+<!------------------------画像スライド------------------------>
+<div id="slider">
+  <div id="theTarget">
+    <div class="image1"></div>
+    <div class="image2"></div>
+    <div class="image3"></div>
+    <div class="image4"></div>
+    <div class="image5"></div>
+  </div>
+</div>
+
   <div class="background-img">
     <!--<div class="box-guest" >-->
   <div class="top-box-2"></div>
