[fix] task layout

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -12,7 +12,7 @@
   background-color: gray;
   color: white;
   text-align: center;
-  border-radius: 50px;
+  // border-radius: 50px;
 }
 
 //----------新規タスク画面----------//
