--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer>
-    <div class='footer'>
+  <div class="footer">
+    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">-->
       <p>CopyRight Todo Manager.inc</p>
-    </div>
+    <!--</nav>-->
+  </div>
 </footer>
