--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -12,7 +12,51 @@
   background-size: cover;
 }
 
+.font {
+  background-color: #ededed;
+  height: 50px;
+  padding: 10px 0 0 20px;
+}
+
+p {
+  font-size: 18px;
+}
+
+li {
+  font-size: 18px;
+}
+
+//----------scrollreveal----------//
+
+@mixin positionCenter() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.page {
+  position: relative;
+  height: 30vh;
+}
+
+.target {
+  @include positionCenter();
+  font-size: 100px;
+  font-weight: bold;
+  font-family: Noto Sans JP;
+  color: #6c757d;
+}
+//----------空白を入れる----------//
+
+.blank{
+  position: relative;
+  height: 30vh;
+}
+
 //----------ゲストログイン----------//
+
 .gest-signin {
   position: fixed;
   right: 100px;
@@ -37,53 +81,3 @@
   }
 
 //---------- ----------//
-
-// スライド部分
-.white-back {
-  height: 20vw;
-  width: 100%;
-  background-color: white;
-  position: relative;
-  overflow: hidden;
-  position: relative;
- }
-  .slideConts {
-    width: 80vw;
-    height: 80%;
-    margin: 1% auto;
-    padding: 1%;
-    -webkit-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
-    display: flex;
-    justify-content: flex-end;
-
-  }
-
-  .slideContsL {
-    background-color: #BABABA;
-    transform: translate(-1500px, 0);
-  }
-
-  .slideContsL.show {
-    transform: translate(-20%, 0) !important;
-  }
-
-  .blank {
-    width: 9%;
-    height: 100%;
-  }
-  .slidein {
-    background-image: image-url("slidein.png");
-    width: 66%;
-    height: 100%;
-    margin: auto 5%;
-    background-size: cover;
-    margin: auto;
-  }
-  .slidein-button {
-    width: 15%;
-    height: 100%;
-    margin-right: 2%;
-    position: relative;
-  }
