--- a/app/assets/stylesheets/seeks.scss
+++ b/app/assets/stylesheets/seeks.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the seeks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.task-font {
+  font-size: 30px;
+  margin-top: 50px;
+}
