--- a/app/views/seeks/seek.html.erb
+++ b/app/views/seeks/seek.html.erb
@@ -6,21 +6,23 @@
   <div class="row">
     <div class="col-md-12 text-center">
       <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-           <th>タイトル</th>
-           <th>優先度</th>
-           <th>進捗状況</th>
-           <th colspan="3"></th>
-          </tr>
-        </thead>
+        <div class="task-font">
+          <thead>
+            <tr>
+             <th>タイトル</th>
+             <th>優先度</th>
+             <th>進捗状況</th>
+             <th colspan="3"></th>
+            </tr>
+          </thead>
           <% @tasks.each do |task| %>
            <tr>
-            <td><%= link_to task.title, task, class: "task_#{task.id}" %></td>
+            <strong><td><%= link_to task.title, task, class: "task_#{task.id}" %></td></strong>
             <td><%= task.priority %></td>
             <td><%= task.status %></td>
            </tr>
           <% end %>
+        </div>
       </table>
     </div>
   </div>
