--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -23,9 +23,9 @@
   <% end %>
 </div>
 <div class="home">
-  <h3 class="home-text">
-  Todo managerはあなたが抱える「仕事」や「やること」を優先度と進捗を<br>
-  管理して,タスクの優先順位を簡単に見分けられるようにサポートする<br>
+  <h3 class="home-text text-left">
+  Todo managerはあなたが抱える「仕事」や「やること」を優先度と進捗を
+  管理して,タスクの優先順位を簡単に見分けられるようにサポートする
   アプリケーションです。
   </h3>
 </div>
