[fix] homes layout

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -24,7 +24,7 @@
 </div>
 <div class="home">
   <h3 class="home-text text-left">
-  Todo managerはあなたが抱える「仕事」や「やること」を優先度と進捗を
+  <span style="font-size: 40px;">Todo manager </span>はあなたが抱える「仕事」や「やること」を優先度と進捗を
   管理して,タスクの優先順位を簡単に見分けられるようにサポートする
   アプリケーションです。
   </h3>
