--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,12 +1,6 @@
-<div class="gest-signin">
-  <%= link_to users_guest_sign_in_path, method: :post do %>
-    ゲストログイン<br>
-    <span>(ポートフォリオ閲覧用)</span>
-  <% end %>
-</div>
 <div class="home">
   <h3 class="home-text text-left">
-  Todo managerはあなたが抱える「仕事」や「やること」を優先度と進捗を
+  <span style="font-size: 40px;">Todo manager </span>はあなたが抱える「仕事」や「やること」を優先度と進捗を
   管理して,タスクの優先順位を簡単に見分けられるようにサポートする
   アプリケーションです。
   </h3>
