--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
   <div class='row'>
     <!--<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">-->
     <div class="offset-2 col-sm-12 col-md-6 col-lg-4">
-      <%= attachment_image_tag @user, :profile_image, fallback: "icon_business_man01.png", size:"200x200" %>
+      <%= attachment_image_tag @user, :profile_image, fallback: "person01.jpg", size:"200x200" %>
       <div class="user-show">
           <div class='user-name'>
             <h5>名前：</h5>
