--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,19 +24,19 @@
     <br>
     <div class="col-lg-4">
     <h5>ここにルーチンタスクもしくは<br>小さな習慣を追加して下さい</h5>
-      <div class='container px-5'>
+      <div class='container'>
         <div class='row'>
-          <div class='col-8'>
-            <div class="my-5">
-              <table>
-              <%= form_with model: @routine_task, url:routine_tasks_path(@routine_task.id), local: true do |f| %>
-                <th><%= f.text_field :name %></th>
-                <th><%= f.submit "追加", class: "btn btn-success btn-sm"%></th>
-              <% end %>
-              </table>
-            </div>
-            <!--< %= render "layouts/routine_info", routine_tasks: @routine_tasks %>-->
+          <div class="my-5">
+            <table>
+              <div class="routine_form">
+                <%= form_with model: @routine_task, url:routine_tasks_path(@routine_task.id), local: true do |f| %>
+                  <th><%= f.text_field :name %></th>
+                  <th><%= f.submit "追加", class: "btn btn-success btn-sm"%></th>
+                <% end %>
+              </div>
+            </table>
           </div>
+          <!--< %= render "layouts/routine_info", routine_tasks: @routine_tasks %>-->
         </div>
       </div>
       <h5>ルーチンタスク数：<%= @routine_tasks.count %> <i class="fas fa-thumbtack"></i></h5>
