--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,7 +10,11 @@
   height: 30px;
   display: inline-block;
 }
+
 .user-introduction h5 {
   display: inline-block;
+}
 
+.users{
+  margin-top: 30px;
 }
