--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,23 +6,26 @@
   <div class='row'>
     <!--<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">-->
     <div class="offset-2 col-sm-12 col-md-6 col-lg-4">
-      <%= attachment_image_tag @user, :profile_image, fallback: "person01.jpg", size:"200x200" %>
-      <div class="user-show">
-          <div class='user-name'>
-            <h5>名前：</h5>
-            <h5><%= @user.name %></h5>
+      <div class="users">
+        <%= attachment_image_tag @user, :profile_image, fallback: "person01.jpg", size:"200x200" %>
+          <div class="user-show">
+            <div class='user-name'>
+              <h5>名前：</h5>
+              <h5><%= @user.name %></h5>
+            </div>
+            <div class='user-introduction'>
+              <h5>紹介：</h5>
+              <h5><%= @user.introduction %></h5>
+            </div>
           </div>
-          <div class='user-introduction'>
-            <h5>紹介：</h5>
-            <h5><%= @user.introduction %></h5>
-          </div>
-        </div>
+      </div>
       <div>
         <%= link_to "編集", edit_user_path(@user), class: "btn btn-success " %>
       </div>
     </div>
     <br>
-    <div class="col-lg-4">
+
+    <div class="col-lg-5 my-3">
     <h5>ここにルーチンタスクもしくは<br>小さな習慣を追加して下さい</h5>
       <div class='container'>
         <div class='row'>
@@ -30,7 +33,7 @@
             <table>
               <div class="routine_form">
                 <%= form_with model: @routine_task, url:routine_tasks_path(@routine_task.id), local: true do |f| %>
-                  <th><%= f.text_field :name %></th>
+                  <th width=200px><%= f.text_field :name %></th>
                   <th><%= f.submit "追加", class: "btn btn-success btn-sm"%></th>
                 <% end %>
               </div>
