--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -6,7 +6,7 @@
       <br>
     </div>
     <div class="rakubook-details">
-      <ul>
+      <ul style="width: 500px;">
         ＜タイトル＞<br>
         <p><%= book.title %></p>
         ＜著者＞<br>
