--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,8 @@
 <!------------------------scrollreveal------------------------>
-<div class="page">
-  <div class="target text">Todo Manager</div>
+<div class="container">
+  <div class="page">
+    <div class="target text">Todo Manager</div>
+  </div>
 </div>
 <!------------------------画像スライド------------------------>
 <div id="slider">
@@ -22,6 +24,7 @@
     <span>(ポートフォリオ閲覧用)</span>
   <% end %>
 </div>
+
 <div class="home">
   <h3 class="home-text text-left">
   <span style="font-size: 40px;">Todo manager </span>はあなたが抱える「仕事」や「やること」を優先度と進捗を
@@ -29,6 +32,7 @@
   アプリケーションです。
   </h3>
 </div>
+  <br>
   <div class="container">
     <div class="row">
       <div class="offset-2 col-md-7">
@@ -60,3 +64,6 @@
       </div>
     </div>
   </div>
+<br>
+<br>
+<br>
