--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,7 +1,7 @@
 <div class="title">
   <h4>楽天書籍検索</h4>
 </div>
-<div class="container">
+<div class="container my-5">
   <div class="row">
     <div class="col-7 offset-3">
       <div class="search-box">
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-7 col-xs-7 offset-3">
+    <div class="col-md-8 col-xs-8 offset-2">
       <% if @books.present? %>
         <%= render 'book' %>
       <% end %>
