--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <div class="mx-auto" style="width: 200px;">
+      <div class="mx-auto my-5" style="width: 300px;">
         <h2>Sign up</h2>
 
         <!--< %= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
