--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container">
-      <a class="navbar-brand" href="/"><div>Todo Manager</div><div class="logo-image"></div></a>
+      <a class="navbar-brand" href="/"><div style="font-family: Noto Sans JP; font-size: 25px;">Todo Manager</div></a> <!--<div class="logo-image"></div>-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
