--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -31,7 +31,9 @@
           <%= form.submit "実行" %>
         <% end %>
         <div class= "new-buttom">
-          <%= link_to new_task_path do %><i class="far fa-plus-square fa-3x"></i><% end %>
+          <%= link_to new_task_path do %><i class="far fa-plus-square fa-2x"></i>
+            <h7>タスク追加</h7>
+          <% end %>
         </div>
       </div>
     </div>
@@ -81,4 +83,3 @@
       </table>
     </div>
   </div>
-</div>
